<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/editor_back_button"
        android:layout_width="48dp"
        android:layout_height="58dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:paddingStart="18dp"
        android:paddingEnd="6dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editor_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/editor_title"
        android:textColor="@color/lifelab_text_primary"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/editor_back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/save_draft_action"
        android:layout_width="72dp"
        android:layout_height="58dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/save_draft_short"
        android:textColor="@color/lifelab_primary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
